<resources>
    <string name="app_name">Quize</string>
    <string name="continue_button">Continue</string>
    <string name="start_button">Start</string>
    <string name="date_button">Enter your date of birth</string>
    <string name="musiq_quize_label">MUSIQ QUIZE</string>
    <string name="finish_label_go_to_results">The survey is completed, click the RESULT button</string>
    <string name="your_result_label">Your result</string>

    <string name="question_1">How many members are there in kpop group BTS?</string>
    <string name="answer_to_1_1">0</string>
    <string name="answer_to_1_2">7</string>

    <string name="answer_to_2_1">GLO GANG</string>
    <string name="answer_to_2_2">DRAIN GANG</string>

    <string name="question_3">Is the real name of the artist Blood Orange?</string>
    <string name="answer_to_3_1">Devonté Hynes</string>
    <string name="answer_to_3_2">Rakim Athelaston Mayers</string>
    <string name="nextButton">Next</string>
    <string name="resultButton">Result</string>

    <string name="enter_birthday">Enter your date of birth</string>
    <string name="stub">text</string>
    <string name="right">Right</string>
    <string name="question_2">What is the name of the chief keef-a record label?</string>
</resources>