<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".QuizeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/musiq_quize_label"
            android:textSize="28sp"
            android:fontFamily="@font/opensans_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >
        </androidx.appcompat.widget.AppCompatTextView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/questions"
        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/footer">

        <LinearLayout
            android:id="@+id/question_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:rotation="0"
            android:rotationX="0"
            android:rotationY="0">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/question"
                style="@style/Theme.App.Question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stub" />

            <RadioGroup
                android:id="@+id/variants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/var1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/var2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/nextButton"
                    style="@style/Theme.App.Buttons"
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/nextButton" />

                <Button
                    android:id="@+id/finishButton"
                    style="@style/Theme.App.Buttons"
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:alpha="0"
                    android:text="@string/resultButton"
                    android:visibility="invisible" />
            </FrameLayout>
        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>